fixed overlapping author kkey and mode text in circle packing view

--- a/flask_codemd/codemd/static/circle_packing.css
+++ b/flask_codemd/codemd/static/circle_packing.css
@@ -1,10 +1,10 @@
-html,body {
-   height: 100%;
-   width: 100%;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 .scrollable-content::-webkit-scrollbar * {
-  background:transparent; // manage scrollbar background color here
+  background: transparent; // manage scrollbar background color here
 }
 
 .project-info {
@@ -15,21 +15,25 @@ html,body {
 
 .description-col {
   height: 100%;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
 }
 
 .mode-description {
-  width:100%;
-  height:60%;
+  width: 100%;
+  height: calc(70% - 94px);
   position: absolute;
-  overflow-y:scroll;
+  overflow-y: scroll;
+  /*flex: 1;*/
 }
 
 .packing-legend {
   width 100%;
-  height: 35%;
+  height: 30%;
   position: absolute;
+  overflow-y: scroll;
   bottom: 5px;
-
 }
 
 #legend {
@@ -68,8 +72,7 @@ html,body {
   margin: 4px 4px !important;
 }
 
-#packing-container {
-}
+#packing-container {}
 
 .node {
   cursor: pointer;
